--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <form>
         <input type="text" placeholder="Username" required />
         <input type="password" placeholder="Password" required />
-        <a href="home.html">
+        <a href="main.html">
           <div class="div-" type="submit">Login</div>
         </a>
         <a href="#">Forgot your password?</a>
